--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Django==5.1.2
 Pillow==11.0.0
 black==24.10.0
+django-allauth[socialaccount]==65.10.0
 celery-redbeat==2.2.0
 celery[redis]==5.4.0
 crispy-tailwind==1.0.3
-django-allauth==65.1.0
 django-crispy-forms==2.3
 django-debug-toolbar==4.4.6
 django-environ==0.11.2
